--- a/ponsol2web/templates/ponsol2web/base_generic.html
+++ b/ponsol2web/templates/ponsol2web/base_generic.html
@@ -4,8 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Home {% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static "ponsol2web/button.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "ponsol2web/base_style.css" %}">
+    <!-- 引入 Bootstrap -->
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- HTML5 Shiv 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
+    <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 <body>
 <div id="navigator" class="left main_color">
@@ -18,6 +28,7 @@
         <li class="index"><a class="ttlink" href="{% url "ponsol2:index" %}">HOME</a></li>
         <li class="index"><a class="ttlink" href="{% url "ponsol2:input" %}">PREDICT</a></li>
         <li class="index"><a class="ttlink" href="{% url "ponsol2:result" %}">RESULT</a></li>
+        <li class="index"><a class="ttlink" href="{% url "ponsol2:disclaimer" %}">DISCLAIMER</a></li>
         <li class="index"><a class="ttlink" href="{% url "ponsol2:about" %}">ABOUT</a></li>
     </ul>
 </div>
@@ -25,7 +36,7 @@
 <div id="content" class="right">
     <div id="title">
 
-        <h1>{% block content_title %}Wecome to Pon-Sol2! {% endblock %}</h1>
+        <h1>{% block content_title %}Wecome to PON-Sol2! {% endblock %}</h1>
         <p>{% block content_title_describe %} {% endblock %}</p>
     </div>
     {% block content %}
@@ -35,5 +46,11 @@
         </a>
     {% endblock %}
 </div>
+
+
+<!-- jQuery (Bootstrap 的 JavaScript 插件需要引入 jQuery) -->
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+<!-- 包括所有已编译的插件 -->
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
