完成大多数功能，还有以下功能需要完善： 1. 首页内容跳转 2. About页丰富内容 3. 发邮件

--- a/ponsol2web/static/ponsol2web/base_style.css
+++ b/ponsol2web/static/ponsol2web/base_style.css
@@ -1,146 +1,4 @@
-h1 {
-    margin: 0;
-}
-
-html, body {
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    background: aliceblue;
-}
-
-.main_color {
-    background: #16c79a;
-}
-
-.left {
-    float: left;
-    width: 200px;
-    height: 100%;
-    padding: 10px;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-
-}
-
-.right {
-    margin-left: 200px;
-    padding: 100px 0 100px 100px;
-}
-#title {
-    margin-bottom: 30px;
-}
-#logo {
-    width: 100%;
-    margin-top: 30px;
-}
-
-#navigator > ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-a, a:hover, a:visited {
-    color: black;
-}
-
-li.index {
-    width: 100%;
-}
-
-li.index a {
-    display: block;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-}
-
-a.ttlink {
-    text-decoration: none;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-a.ttlink:hover {
-    background: aliceblue;
-}
-
-div.button {
-    width: 130px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    border-radius: 20px;
-    font-size: 20px;
-}
-
-div.form {
-    font-size: 20px;
-}
-
-div.form * {
-    font-size: 20px;
-}
-
-div.form div {
-    margin: 20px 0 10px 0;
-}
-
-#ponsol_form {
-    width: 800px;
-}
-
-#ponsol_form textarea {
-    width: 100%;
-    height: 200px;
-    resize: none;
-}
-
-div.form label.right-align {
-    display: inline-block;
-    width: 80px;
-    text-align: right;
-    margin-right: 20px;
-}
-
-table#detail {
-    width: 80%;
-    word-wrap: break-word;
-    word-break: break-all;
-    border-collapse: collapse;
-    border: 1px solid black;
-    margin: 20px;
-}
-table#detail .title {
-    width: 150px;
-    padding: 10px;
-}
-table#detail td {
-    border:1px solid black;
-    padding: 10px;
-
-}
-
-#result_list table{
-    border-collapse: collapse;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-}
-#result_list table tr:first-child {
-    border-bottom: 1px solid black;
-}
-#result_list table, th.border_box, td.border_box  {
-    /*border: 1px solid black;*/
-    padding: 10px;
-}
-
-
-div.note {
-    color: #5e5e5e;
-    text-align: right;
-    margin-right: 30px;
-    font-size: smaller;
+.fix-vertical-center {
+    display: flex;
+    align-items: center
 }
