--- a/ponsol2web/templates/ponsol2web/disclaimer.html
+++ b/ponsol2web/templates/ponsol2web/disclaimer.html
@@ -1,14 +1,24 @@
 {% extends "ponsol2web/base_generic.html" %}
-{% block title %} About {% endblock %}
+{% block title %} Disclaimer{% endblock %}
 
-{% block content_title %}
-    Disclaimer
-{% endblock %}
-
-{% block content_title_describe %}
-    This non-profit server, its associated data and services are for research purposes only. The responsibility of Protein Structure and Bioinformatics Group, Lund University is limited to applying the best efforts in providing and publishing good programs and data. The developers have no responsibility for the usage of results, data or information which this server has provided.
-{% endblock %}
 
 {% block content %}
-    <p>Waiting for completing...</p>
+    <h1>Disclaimer</h1>
+    <p>This non-profit server, its associated data and services are for research purposes only. The responsibility of
+        Protein Structure and Bioinformatics Group, Lund University is limited to applying the best efforts in providing
+        and publishing good programs and data. The developers have no responsibility for the usage of results, data or
+        information which this server has provided.</p>
+    <ul class="nav nav-list">
+        <li class="divider"></li>
+    </ul>
+    <h1> Liability </h1>
+    <p>
+        In preparation of this site and service, every effort has been made to offer the most current and correct
+        information possible. We render no warranty, express or implied, as to its accuracy or that the information is
+        fit for a particular purpose, and will not be held responsible for any direct, indirect, putative, special, or
+        consequential damages arising out of any inaccuracies or omissions. In utilizing this service, individuals,
+        organizations, and companies absolve Lund University or any of their employees or agents from responsibility for
+        the effect of any process, method or product or that may be produced or adopted by any part, notwithstanding
+        that the formulation of such process, method or product may be based upon information provided here.
+    </p>
 {% endblock %}
