--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -1,4 +1,41 @@
 {% extends "ponsol2web/base_generic.html" %}
-{% block content_title_describe %}
-    Pon-Sol2 a wonderful method to predict the change of solubility for protein by amino acid substitutions (AASs).
+{% block content %}
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+        <h1>Wecome to <strong>PON-Sol2</strong></h1>
+        <p class="lead">
+            Solubility is a central protein property and when reduced can lead to diseases. We have developed a
+            prediction method, PON-Sol2, to identify amino acid substitutions that increase, decrease of have no effect
+            on the protein solubility.
+        </p>
+        <p><a class="btn btn-lg btn-success" href="{% url "ponsol2:input" %}" role="button">Get started</a></p>
+    </div>
+
+    <!-- Example row of columns -->
+    <div class="row">
+        <div class="col-lg-4">
+            <h2>Input Format</h2>
+            <p>
+                There are two input ways that have different input formats. Faste sequences and amino acid substitutions
+                are provided seperatly, or IDs and amino acid substitutions are put together.
+            </p>
+            <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+        </div>
+        <div class="col-lg-4">
+            <h2>Dataset</h2>
+            <p>Altogether 11201 amino acid substitutions in 77 proteins are collected. After filtering, 5666 variants
+                are used for training, and 662 variants are used for blind testing.</p>
+            <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+        </div>
+        <div class="col-lg-4">
+            <h2>Predict Result</h2>
+            <p>
+                Predict results will be displayed in the Result page. The list of result is generated according to IP.
+                You can also provide your email, and results will be sent to your email if completed.
+            </p>
+            <p><a class="btn btn-primary" href="{% url "ponsol2:task-list" %}" role="button">View
+                details »</a></p>
+        </div>
+    </div>
 {% endblock %}
+
