--- a/ponsol2web/templates/ponsol2web/base_generic.html
+++ b/ponsol2web/templates/ponsol2web/base_generic.html
@@ -42,8 +42,8 @@
 
     {% endblock %}
     <!-- Site footer -->
-    <footer class="footer">
-        <p>Last update 2021</p>
+    <footer class="footer text-center">
+        <p>Last updated: 2021-2-24</p>
     </footer>
 
 </div> <!-- /container -->
