--- a/ponsol2web/templates/ponsol2web/record_detail.html
+++ b/ponsol2web/templates/ponsol2web/record_detail.html
@@ -39,7 +39,7 @@
             </tr>
             <tr class="row">
                 <td class="col-lg-2">Result</td>
-                <td class="col-lg-10">{{ record.solubility}}</td>
+                <td class="col-lg-10">{{ record.get_solubility_display}}</td>
             </tr>
             <tr class="row">
                 <td class="col-lg-2">Status</td>
