--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -19,7 +19,7 @@
                 There are two input ways that have different input formats. Faste sequences and amino acid substitutions
                 are provided seperatly, or IDs and amino acid substitutions are put together.
             </p>
-            <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+            <p><a class="btn btn-primary" href="{% url "ponsol2:about" %}" role="button">View details »</a></p>
         </div>
         <div class="col-lg-4">
             <h2>Dataset</h2>
