修改部分文字（AAS、FASTA等）

--- a/ponsol2web/templates/ponsol2web/detail.html
+++ b/ponsol2web/templates/ponsol2web/detail.html
@@ -11,11 +11,11 @@
 
     <table id="detail">
         <tr>
-            <td class="title"><span>Fasta Sequence</span></td>
+            <td class="title"><span>FASTA Sequence</span></td>
             <td><span>{{ record.name }}</span><br><span>{{ record.seq }}</span></td>
         </tr>
         <tr>
-            <td class="title"><span>AAS</span></td>
+            <td class="title"><span>amino acid substitution</span></td>
             <td>{{ record.aa }}</td>
         </tr>
     </table>
