--- a/ponsol2web/templates/ponsol2web/record_detail.html
+++ b/ponsol2web/templates/ponsol2web/record_detail.html
@@ -30,7 +30,7 @@
                 <td class="col-lg-10">{{ record.name }}</td>
             </tr>
             <tr class="row">
-                <td class="col-lg-2">Faste Sequence</td>
+                <td class="col-lg-2">FASTA Sequence</td>
                 <td class="col-lg-10">{{ record.seq }}</td>
             </tr>
             <tr class="row">
