添加了dataset下载以及引用的描述。

--- a/ponsol2web/templates/ponsol2web/task_detail.html
+++ b/ponsol2web/templates/ponsol2web/task_detail.html
@@ -59,6 +59,7 @@
                 <tr>
                     <th>#</th>
                     <th>Protein Name</th>
+                    <th>Substitution</th>
                     <th>Status</th>
                     <th>Solubility</th>
                 </tr>
@@ -66,6 +67,7 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td><a href="{% url "ponsol2:record-detail" record.id %}">{{ record.name }}</a></td>
+                        <td>{{ record.aa }}</td>
                         <td class="text-capitalize">{{ record.status }}</td>
                         <td>{{ record.get_solubility_display }}</td>
                     </tr>
