--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -16,7 +16,7 @@
 
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-4">
             <h2>Input Format</h2>
             <p>
                 There are two input ways that have different input formats. FASTA sequences and amino acid substitutions
@@ -24,7 +24,7 @@
             </p>
             <p><a class="btn btn-primary" href="{% url "ponsol2:about" %}#input_example" role="button">View details »</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-4">
             <h2>Dataset</h2>
             <p>Altogether 11201 amino acid substitutions in 77 proteins are collected. After filtering, 5666 variants
                 are used for training, and 662 variants are used for blind testing. The database is freely available.
@@ -32,7 +32,7 @@
             </p>
             <p><a class="btn btn-primary" href="{% url "ponsol2:about" %}#dataset" role="button">View details »</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-4">
             <h2>Predict Result</h2>
             <p>
                 Predict result will be displayed in the Result page. The list of result is generated according to IP.
