--- a/ponsol2web/templates/ponsol2web/base_generic.html
+++ b/ponsol2web/templates/ponsol2web/base_generic.html
@@ -21,33 +21,50 @@
     <!-- The justified navigation menu is meant for single line per list item.
          Multiple lines will require custom code not provided by Bootstrap. -->
     <div class="">
-        <div>
-            <a href="{% url "ponsol2:index" %}" >
-                <img alt="PON-Sol2" style="width:150px; max-height: 52px; padding: 5px;"
-                     src="{% static "ponsol2web/img/ponsol2_logo.png" %}">
-            </a>
-        </div>
-        <div class="fa-align-right">
-            <span><a href="{% url "ponsol2:login" %}">登录</a></span>
-            <span>/</span>
-            <span><a href="{% url "ponsol2:register" %}">注册</a></span>
-            <span>/</span>
-            <span><a href="{% url "ponsol2:logout" %}">退出登录</a> </span>
-            <span>/</span>
-            <span><a href="/zlj/admin">管理员</a> </span>
-        </div>
+        <span><a href="{% url "ponsol2:login" %}">登录</a></span>
+        <span>/</span>
+        <span><a href="{% url "ponsol2:register" %}">注册</a></span>
+        <span>/</span>
+        <span><a href="{% url "ponsol2:logout" %}">退出登录</a> </span>
+        <span>/</span>
+        <span><a href="/zlj/admin">管理员</a> </span>
     </div>
-    <div class="masthead" style="margin-bottom: 40px;">
-        <nav>
-            <ul class="nav nav-justified">
-                <li><a href="{% url "ponsol2:index" %}">Home</a></li>
-                <li><a href="{% url "ponsol2:input" %}">Predict</a></li>
-                <li><a href="{% url "ponsol2:task-list" %}">Result</a></li>
-                <li><a href="{% url "ponsol2:disclaimer" %}">Disclaimer</a></li>
-                <li><a href="{% url "ponsol2:about" %}">About</a></li>
-            </ul>
-        </nav>
-    </div>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a href="{% url "ponsol2:index" %}">
+                    <img alt="PON-Sol2" style="width:150px; max-height: 52px; padding: 5px;"
+                         src="{% static "ponsol2web/img/ponsol2_logo.png" %}">
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url "ponsol2:index" %}">Home</a></li>
+                    <li><a href="{% url "ponsol2:input" %}">Predict</a></li>
+                    <li><a href="{% url "ponsol2:task-list" %}">Result</a></li>
+                    <li><a href="{% url "ponsol2:disclaimer" %}">Disclaimer</a></li>
+                    <li><a href="{% url "ponsol2:about" %}">About</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <p class="navbar-text">
+                        <a href="{% url "ponsol2:login" %}"><strong>Sign in</strong></a>
+                        /
+                        <a href="{% url "ponsol2:register" %}">Sign up</a>
+
+                    </p>
+                    <form class="nav navbar-form navbar-right">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search...">
+                        </div>
+                        <button type="submit" class="btn btn-default">Search</button>
+                    </form>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
     {% block content %}
 
