--- a/ponsol2web/templates/registration/login.html
+++ b/ponsol2web/templates/registration/login.html
@@ -1,62 +1,44 @@
-{% extends "registration/base_generic.html" %}
-{% load static %}
-{% block container %}
-    <body class="my-login-page">
-    <section class="h-100">
-        <div class="container h-100">
-            <div class="row justify-content-md-center h-100">
-                <div class="card-wrapper">
-                    <div class="brand">
-                        <img src="{% static "registration/img/logo.jpg"%}" alt="logo">
-                    </div>
-                    <div class="card fat">
-                        <div class="card-body">
-                            <h4 class="card-title">Login</h4>
-                            <form method="POST" class="my-login-validation" novalidate="">
-                                <div class="form-group">
-                                    <label for="email">E-Mail Address</label>
-                                    <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
-                                    <div class="invalid-feedback">
-                                        Email is invalid
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="password">Password
-                                        <a href="forgot.html" class="float-right">
-                                            Forgot Password?
-                                        </a>
-                                    </label>
-                                    <input id="password" type="password" class="form-control" name="password" required data-eye>
-                                    <div class="invalid-feedback">
-                                        Password is required
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="custom-checkbox custom-control">
-                                        <input type="checkbox" name="remember" id="remember" class="custom-control-input">
-                                        <label for="remember" class="custom-control-label">Remember Me</label>
-                                    </div>
-                                </div>
-
-                                <div class="form-group m-0">
-                                    <button type="submit" class="btn btn-primary btn-block">
-                                        Login
-                                    </button>
-                                </div>
-                                <div class="mt-4 text-center">
-                                    Don't have an account? <a href="register.html">Create One</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="footer">
-                        Copyright &copy; 2017 &mdash; Your Company
-                    </div>
+{% extends "registration/base_login_card.html" %}
+{% block card-body %}
+    <div class="card-body">
+        <h4 class="card-title">Login</h4>
+        <form method="POST" class="my-login-validation" novalidate="">
+            <div class="form-group">
+                <label for="email">E-Mail Address</label>
+                <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+                <div class="invalid-feedback">
+                    Email is invalid
                 </div>
             </div>
-        </div>
-    </section>
-    </body>
+
+            <div class="form-group">
+                <label for="password">Password
+                    <a href="{% url "ponsol2:password_reset" %}" class="float-right">
+                        Forgot Password?
+                    </a>
+                </label>
+                <input id="password" type="password" class="form-control" name="password" required data-eye>
+                <div class="invalid-feedback">
+                    Password is required
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="custom-checkbox custom-control">
+                    <input type="checkbox" name="remember" id="remember" class="custom-control-input">
+                    <label for="remember" class="custom-control-label">Remember Me</label>
+                </div>
+            </div>
+
+            <div class="form-group m-0">
+                <button type="submit" class="btn btn-primary btn-block">
+                    Login
+                </button>
+            </div>
+            <div class="mt-4 text-center">
+                Don't have an account? <a href="{% url "ponsol2:register" %}">Register</a>
+            </div>
+        </form>
+    </div>
+
 {% endblock %}
