--- a/ponsol2web/templates/registration/register.html
+++ b/ponsol2web/templates/registration/register.html
@@ -1,71 +1,51 @@
-<!DOCTYPE html>
-{% extends "registration/base_generic.html" %}
-{% block container %}
-    <body class="my-login-page">
-    <section class="h-100">
-        <div class="container h-100">
-            <div class="row justify-content-md-center h-100">
-                <div class="card-wrapper">
-                    <div class="brand">
-                        <img src="img/logo.jpg" alt="bootstrap 4 login page">
-                    </div>
-                    <div class="card fat">
-                        <div class="card-body">
-                            <h4 class="card-title">Register</h4>
-                            <form method="POST" class="my-login-validation" novalidate="">
-                                <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input id="name" type="text" class="form-control" name="name" required autofocus>
-                                    <div class="invalid-feedback">
-                                        What's your name?
-                                    </div>
-                                </div>
+{% extends "registration/base_login_card.html" %}
+{% block card-body %}
+    <div class="card-body">
+        <h4 class="card-title">Register</h4>
+        <form method="POST" class="my-login-validation" novalidate="" action="{% url "ponsol2:register" %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="{{ form.username.id_for_label }}">Name</label>
+                {{ form.username }}
+                <div class="invalid-feedback">
+                    What's your name?
+                </div>
+            </div>
 
-                                <div class="form-group">
-                                    <label for="email">E-Mail Address</label>
-                                    <input id="email" type="email" class="form-control" name="email" required>
-                                    <div class="invalid-feedback">
-                                        Your email is invalid
-                                    </div>
-                                </div>
+            <div class="form-group">
+                <label for="{{ form.email.id_for_label }}">E-Mail Address</label>
+                {{ form.email }}
+                <div class="invalid-feedback">
+                    Your email is invalid
+                </div>
+            </div>
 
-                                <div class="form-group">
-                                    <label for="password">Password</label>
-                                    <input id="password" type="password" class="form-control" name="password" required data-eye>
-                                    <div class="invalid-feedback">
-                                        Password is required
-                                    </div>
-                                </div>
+            <div class="form-group">
+                <label for="{{ form.password.id_for_label }}">Password</label>
+                {{ form.password }}
+                <div class="invalid-feedback">
+                    Password is required
+                </div>
+            </div>
 
-                                <div class="form-group">
-                                    <div class="custom-checkbox custom-control">
-                                        <input type="checkbox" name="agree" id="agree" class="custom-control-input" required="">
-                                        <label for="agree" class="custom-control-label">I agree to the <a href="#">Terms and Conditions</a></label>
-                                        <div class="invalid-feedback">
-                                            You must agree with our Terms and Conditions
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group m-0">
-                                    <button type="submit" class="btn btn-primary btn-block">
-                                        Register
-                                    </button>
-                                </div>
-                                <div class="mt-4 text-center">
-                                    Already have an account? <a href="index.html">Login</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="footer">
-                        Copyright &copy; 2017 &mdash; Your Company
+            <div class="form-group">
+                <div class="custom-checkbox custom-control">
+                    <input type="checkbox" name="agree" id="agree" class="custom-control-input" required="">
+                    <label for="agree" class="custom-control-label">I agree to the <a href="#">Terms and Conditions</a></label>
+                    <div class="invalid-feedback">
+                        You must agree with our Terms and Conditions
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
 
-    </body>
-    </html>
+            <div class="form-group m-0">
+                <button type="submit" class="btn btn-primary btn-block">
+                    Register
+                </button>
+            </div>
+            <div class="mt-4 text-center">
+                Already have an account? <a href="{% url "ponsol2:login" %}">Login</a>
+            </div>
+        </form>
+    </div>
 {% endblock %}
