--- a/ponsol2web/templates/registration/forgot.html
+++ b/ponsol2web/templates/registration/forgot.html
@@ -3,18 +3,22 @@
     <div class="card-body">
         <h4 class="card-title">Forgot Password</h4>
         <form method="POST" class="my-login-validation" novalidate="">
+            {% csrf_token %}
             <div class="form-group">
-                <label for="email">E-Mail Address</label>
-                <input id="email" type="email" class="form-control" name="email" value="" required
-                       autofocus>
+                <label for="{{ form.email.id_for_label }}">E-Mail Address</label>
+                {{ form.email }}
+                {% if form.email.errors %}
+                    <p class="text-danger">
+                        {{ form.email.errors.0 }}
+                    </p>
+                {% endif %}
                 <div class="invalid-feedback">
-                    Email is invalid
+                    Your email is invalid
                 </div>
                 <div class="form-text text-muted">
                     By clicking "Reset Password" we will send a password reset link
                 </div>
             </div>
-
             <div class="form-group m-0">
                 <button type="submit" class="btn btn-primary btn-block">
                     Reset Password
