--- a/ponsol2web/templates/registration/login.html
+++ b/ponsol2web/templates/registration/login.html
@@ -2,22 +2,21 @@
 {% block card-body %}
     <div class="card-body">
         <h4 class="card-title">Login</h4>
-        <form method="POST" class="my-login-validation" novalidate="">
+        <form method="POST" class="my-login-validation" novalidate="" action="{% url "ponsol2:login" %}">
+            {% csrf_token %}
+
             <div class="form-group">
-                <label for="email">E-Mail Address</label>
-                <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
-                <div class="invalid-feedback">
-                    Email is invalid
-                </div>
+                <label for="{{ form.username.id_for_label }}">User Name</label>
+                {{ form.username }}
             </div>
 
             <div class="form-group">
-                <label for="password">Password
+                <label for="{{ form.password.id_for_label }}">Password
                     <a href="{% url "ponsol2:password_reset" %}" class="float-right">
                         Forgot Password?
                     </a>
                 </label>
-                <input id="password" type="password" class="form-control" name="password" required data-eye>
+                {{ form.password }}
                 <div class="invalid-feedback">
                     Password is required
                 </div>
@@ -25,20 +24,34 @@
 
             <div class="form-group">
                 <div class="custom-checkbox custom-control">
-                    <input type="checkbox" name="remember" id="remember" class="custom-control-input">
+                    <input type="checkbox" name="remember" id="remember" class="custom-control-input" checked>
                     <label for="remember" class="custom-control-label">Remember Me</label>
                 </div>
             </div>
 
             <div class="form-group m-0">
-                <button type="submit" class="btn btn-primary btn-block">
+                <button type="submit" class="btn btn-primary btn-block" {% if user.is_authenticated%}
+                disabled="disabled"
+                {% endif %} >
                     Login
                 </button>
             </div>
             <div class="mt-4 text-center">
                 Don't have an account? <a href="{% url "ponsol2:register" %}">Register</a>
             </div>
+
+            <input type="hidden" name="next" value="{% url "ponsol2:index" %}">
         </form>
+        {% if form.errors %}
+            <div class="alert alert-danger">
+                Your username and password didn't match. Please try again.
+            </div>
+        {% endif %}
+        {% if user.is_authenticated %}
+            <div class="alert alert-danger">
+                You have logged in. Please try again after logout.
+            </div>
+        {% endif %}
     </div>
 
 {% endblock %}
