--- a/ponsol2web/templates/registration/password_reset_email.html
+++ b/ponsol2web/templates/registration/password_reset_email.html
@@ -9,6 +9,6 @@
 
 {% translate "Thanks for using our site!" %}
 
-{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+{% blocktranslate %}PON-Sol2{% endblocktranslate %}
 
 {% endautoescape %}
