--- a/ponsol2web/templates/registration/register.html
+++ b/ponsol2web/templates/registration/register.html
@@ -7,37 +7,45 @@
             <div class="form-group">
                 <label for="{{ form.username.id_for_label }}">Name</label>
                 {{ form.username }}
-                <div class="invalid-feedback">
-                    What's your name?
-                </div>
+                {% if form.username.errors %}
+                    <p class="text-danger">
+                        {{ form.username.errors.0 }}
+                    </p>
+                {% endif %}
             </div>
-
             <div class="form-group">
                 <label for="{{ form.email.id_for_label }}">E-Mail Address</label>
                 {{ form.email }}
+                {% if form.email.errors %}
+                    <p class="text-danger">
+                        {{ form.email.errors.0 }}
+                    </p>
+                {% endif %}
                 <div class="invalid-feedback">
                     Your email is invalid
                 </div>
             </div>
-
             <div class="form-group">
                 <label for="{{ form.password.id_for_label }}">Password</label>
                 {{ form.password }}
+                {% if form.password.errors %}
+                    <p class="text-danger">
+                        {{ form.password.errors.0 }}
+                    </p>
+                {% endif %}
                 <div class="invalid-feedback">
                     Password is required
                 </div>
             </div>
-
             <div class="form-group">
                 <div class="custom-checkbox custom-control">
-                    <input type="checkbox" name="agree" id="agree" class="custom-control-input" required="">
+                    <input type="checkbox" name="agree" id="agree" class="custom-control-input" required="" checked>
                     <label for="agree" class="custom-control-label">I agree to the <a href="#">Terms and Conditions</a></label>
                     <div class="invalid-feedback">
                         You must agree with our Terms and Conditions
                     </div>
                 </div>
             </div>
-
             <div class="form-group m-0">
                 <button type="submit" class="btn btn-primary btn-block">
                     Register
@@ -46,6 +54,11 @@
             <div class="mt-4 text-center">
                 Already have an account? <a href="{% url "ponsol2:login" %}">Login</a>
             </div>
+            {% if form.errors %}
+                <div class="alert alert-danger">
+                    {{ form.errors }}
+                </div>
+            {% endif %}
         </form>
     </div>
 {% endblock %}
