--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -42,5 +42,29 @@
                 details »</a></p>
         </div>
     </div>
+    <div class="row text-center" style="margin-top: 50px;">
+        <h1 class="text-center text-capitalize">How to cite?</h1>
+        <p>
+            PON-Sol2 will be published soon.
+        </p>
+        <p>
+            PON-Sol (2016), the old version based on Random Forests, has been published Bioinformatics.
+            <br>
+            Yang, Y. , Niroula, A. , Shen, B. , & Vihinen, M. . (2016). Pon-sol: prediction of effects of amino acid substitutions on protein solubility. Bioinformatics, btw066.
+
+            <span><a class="btn btn-success btn-xs" href="https://academic.oup.com/bioinformatics/article/32/13/2032/1742792?login=true" target="_blank">
+                Go to Bioinformatics
+            </a></span>
+{#            Yang Yang, Abhishek Niroula, Bairong Shen, Mauno Vihinen, PON-Sol: prediction of effects of amino acid substitutions on protein solubility, Bioinformatics, Volume 32, Issue 13, 1 July 2016, Pages 2032–2034, https://doi.org/10.1093/bioinformatics/btw066#}
+{#            It was trained this far on the largest dataset of 406 single amino acid substitutions.#}
+{#            It grouped variants into three classes: solubility decreasing and increasing variants and those not affecting solubility.#}
+        </p>
+        {#        <div class="col-lg-6">#}
+        {#            <h2 class="text-center text-capitalize">How to cite?</h2>#}
+        {#        </div>#}
+        {#        <div class="col-lg-6">#}
+        {#            <h2 class="text-center text-capitalize">Dataset</h2>#}
+        {#        </div>#}
+    </div>
 {% endblock %}
 
