--- a/ponsol2web/templates/registration/forgot.html
+++ b/ponsol2web/templates/registration/forgot.html
@@ -1,7 +1,7 @@
 {% extends "registration/base_login_card.html" %}
 {% block card-body %}
     <div class="card-body">
-        <h4 class="card-title">Forgot Password</h4>
+        <h4 class="card-title">Forgot/Change Password</h4>
         <form method="POST" class="my-login-validation" novalidate="">
             {% csrf_token %}
             <div class="form-group">
