--- a/ponsol2web/templates/registration/register.html
+++ b/ponsol2web/templates/registration/register.html
@@ -5,7 +5,25 @@
         <form method="POST" class="my-login-validation" novalidate="" action="{% url "ponsol2:register" %}">
             {% csrf_token %}
             <div class="form-group">
-                <label for="{{ form.username.id_for_label }}">Name</label>
+                <label for="{{ form.first_name.id_for_label }}">First Name</label>
+                {{ form.first_name}}
+                {% if form.first_name.errors %}
+                    <p class="text-danger">
+                        {{ form.first_name.errors.0 }}
+                    </p>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.last_name.id_for_label }}">Last Name</label>
+                {{ form.last_name }}
+                {% if form.last_name.errors %}
+                    <p class="text-danger">
+                        {{ form.last_name.errors.0 }}
+                    </p>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.username.id_for_label }}">User Name</label>
                 {{ form.username }}
                 {% if form.username.errors %}
                     <p class="text-danger">
