必须输入邮箱；发送到个人邮箱；添加镜像；

--- a/ponsol2web/templates/ponsol2web/about.html
+++ b/ponsol2web/templates/ponsol2web/about.html
@@ -7,6 +7,10 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
+            <h2 id="input_example">Mirror website</h2>
+            <ul>
+                <li>China, <a href="http://139.196.42.166:8090/">http://139.196.42.166:8090</a></li>
+            </ul>
             <h2 id="input_example">Start predict</h2>
             <p>To start using PON-Sol2, you just need to provide protein FASTA sequences and amino acid substitutions.
                 For
