--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -10,6 +10,13 @@
             has been trained on a large data set of variants with different outcomes after selection of features among
             large number of tested properties. The method is fast and has high performance, which was determined for
             each of the variation types as well as for the entire predictor.
+            You can also visit
+            <a class=""
+               href="http://139.196.42.166:8090/" target="_blank">
+                the mirror website, China.
+            </a>
+        </p>
+        <p class="lead">
         </p>
         <p><a class="btn btn-lg btn-success" href="{% url "ponsol2:input" %}" role="button">Get started</a></p>
     </div>
