Correct language errors.

--- a/ponsol2web/templates/ponsol2web/about.html
+++ b/ponsol2web/templates/ponsol2web/about.html
@@ -11,7 +11,7 @@
             <ul>
                 <li>China, <a href="http://139.196.42.166:8090/">http://139.196.42.166:8090</a></li>
             </ul>
-            <h2 id="input_example">Start predict</h2>
+            <h2 id="input_example">Start to predict</h2>
             <p>To start using PON-Sol2, you just need to provide protein FASTA sequences and amino acid substitutions.
                 For
                 protein FASTA
@@ -21,7 +21,7 @@
                 both ways, you can directly provide the corresponding content or upload files, and can submit multiple
                 queries
                 simultaneously.</p>
-            <p>If you just want to get the input example, please click the &quot;Example&quot; text in the input
+            <p>If you just want to get the input example, please click the &quot;Example&quot; text on the input
                 page.</p>
             <h3>Input FASTA sequences</h3>
             <p>If you have the complete FASTA sequences, you can input FASTA sequences. FASTA sequences and amino acid
@@ -31,7 +31,7 @@
             <ol start=''>
                 <li>For FASTA sequences, each sequence should have a header line starting with greater than sign (&gt;)
                     followed
-                    by amino acids sequence. Amino acids sequence need to start from a new line, and can be one-line or
+                    by amino acids sequence. Amino acids sequence needs to start from a new line, and can be one-line or
                     multiline.
                 </li>
                 <li>For amino acid substitutions, substitutions corresponding to a sequence should contain the same
@@ -70,7 +70,7 @@ T3F
                 Protein IDs, amino acid substitutions and type of IDs must be provided, and email is optional.
                 If email is provided, the results will be sent to you by email when ready.
             </p>
-            <p>As protein IDs is usually short, there is only one input box. The IDs should be preceded by greater than
+            <p>As protein IDs are usually short, there is only one input box. The IDs should be preceded by greater than
                 sign
                 (>).
                 You can provide multiple amino acid substitutions, and the amino acid substitutions of the same protein
@@ -101,7 +101,7 @@ V2A
 </code></pre>
             </ol>
             <h2>Predict result</h2>
-            <p>PON-Sol2 provide complete result presentation pages. For each submission you make we call it a &quot;Task&quot;
+            <p>PON-Sol2 provides complete result presentation pages. For each submission you make we call it a &quot;Task&quot;
                 and for each amino acid substitution we call it a &quot;Record&quot;. Each task and record has its own
                 detail page. So there are
                 3
@@ -175,7 +175,7 @@ V2A
                     <span class="glyphicon glyphicon-download-alt"></span>&nbsp;download</a>
             </p>
 
-            <h2>Citie PON-Sol</h2>
+            <h2>Cite PON-Sol</h2>
             <ol>
                 <li><p>PON-Sol 2 will be published soon. <span class="label label-success">Waiting...</span></p>
                 </li>
