--- a/ponsol2web/templates/ponsol2web/predict_index.html
+++ b/ponsol2web/templates/ponsol2web/predict_index.html
@@ -7,7 +7,7 @@
     <div class="row" style="padding-left: 20px; padding-right: 20px">
         <p class="lead">
             PON-Sol2 is a fast predictor based on protein FASTA sequences to identify amino acid substitutions
-            that increase, decrease of have no effect on the protein solubility.
+            that increase, decrease or have no effect on the protein solubility.
             To start using PON-Sol2, you just need to provide protein FASTA sequences and amino acid substitutions.
             For protein FASTA sequences, there are 2 input ways: directly input FASTA sequences or input protein IDs(GI,
             Ensemble ID or UniProt).
